fixed z-index issue

--- a/front-end/src/stylesheets/EventFeedPage.css
+++ b/front-end/src/stylesheets/EventFeedPage.css
@@ -12,7 +12,7 @@
   padding-bottom: 0;
 }
 
-.EventFeedPage .centering-container {
+.EventFeedPage .alert-container {
   z-index: 1;
   position: sticky;
   top: 10vh;
